--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
     "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-1": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "del": "^2.2.0",
     "eslint": "^1.10.3",
     "gulp": "^3.9.0",
@@ -21,7 +21,10 @@
     "gulp-watch": "^4.3.5"
   },
   "dependencies": {
+    "bluebird": "^3.1.2",
     "colors": "^1.1.2",
-    "lodash": "^4.0.0"
+    "lodash": "^4.0.0",
+    "mysql": "^2.10.2",
+    "shelljs": "^0.5.3"
   }
 }
