--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
+    "babel-eslint": "^4.1.8",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "del": "^2.2.0",
     "eslint": "^1.10.3",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-nodemon": "^2.0.6",
-    "gulp-plumber": "^1.0.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-watch": "^4.3.5"
   },
   "dependencies": {
-    "bluebird": "^3.1.2",
+    "bluebird": "^3.3.0",
+    "child-process-promise": "^1.1.0",
     "colors": "^1.1.2",
-    "lodash": "^4.0.0",
-    "mysql": "^2.10.2",
-    "set": "^1.1.1",
-    "shelljs": "^0.5.3"
+    "es6-shim": "^0.34.4",
+    "lodash": "^4.3.0",
+    "mysql": "^2.10.2"
   },
   "repository": {
     "type": "git",
